bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value fini
while (fini)
       ^BDR:36: error: not found: value fini
  fini=1
  ^